syntax = "proto3";

option csharp_namespace = "user_ms.Src.Protos";

import "Src/Protos/Common.proto";

service UserGrpc {
    rpc GetProfile (Empty) returns (UserDto);
    rpc EditProfile (EditProfileDto) returns (UserDto);
    rpc GetUserProgress (Empty) returns (GetUserProgressResponse);
    rpc SetUserProgress (UpdateUserProgressDto) returns (Empty);
}

message UserDto {
    string name = 1;
    string first_last_name = 2;
    string second_last_name = 3;
    string rut = 4;
    string email = 5;
    CareerDto career = 6;
}

message CareerDto {
    string name = 1;
}

message EditProfileDto {
    string name = 1;
    string first_last_name = 2;
    string second_last_name = 3;
}

message GetUserProgressResponse {
    repeated UserProgressDto user_progress = 1;
}

message UserProgressDto {
    int32 id = 1;
    string subject_code = 2;
}

message UpdateUserProgressDto{
    repeated string add_subjects = 1;
    repeated string delete_subjects = 2;
}
